x3c - C++ Plugin Framework

2011-11-08

    * Add GetLogObserver() export function in LogWriter.plugin
    * Auto call x3UninitializePlugin() when a plugin is unloading.
    * LogWriter.plugin: Can work regardless no PluginManager, FileUtility or TextUtility plugins.
    * LogHelper.h: Add X3LOG_GROUP(name) and X3LOG_GROUP2(name, extra).
    * Add LogHelper2.h for non-plugin projects.

2011-11-01

    * Add HookManager plugin and test case.

2011-10-28

    * Support '0x' prefix in CXmlUtil::GetAttributeInt() [ConfigXml.plugin].
    * Add NotifyCmdMsgEvent(). Add a param of 'test' in RawCmdMsgObserver.

------v1.1.4------

2011-10-24

    * Remove dependency of VC++ projects.
    * Auto copy files when building projects (HelloFrame and TestPlatform).

2011-10-18

    * Fix constructors of Cx_ConfigSection.
    * PluginManager\DelayLoad.cpp: change default file name of class cache as "<exepath>\config\<appname>.clsbuf".
    * Add GetTranslationsPath() in Ix_AppWorkPath.

2011-10-09

    * Add a python script 'tools/makeplugin.py'.
    * Replace 'Hollow' as 'Hello'.
    * Optimize Ix_CreateWnd and Cx_CreateWnd.

2011-09-28

    * PluginManager: Load a plugin only in the main thread.
    * Add the prefix of 'x3' to the portability functions in x3win.h

2011-08-26

    * Compile x3c on Mac OS X 10.6 using Code::Blocks IDE and XCode GCC.
    * Add log4cplus-1.0.4 source files and cppunit-1.12.1 header files.

2011-08-18

    * Compile x3c on WIN64 platform(Win2008 x64, VC++ 2008 x64).

2011-08-09

    * Rename folders as lowercase.
    * Auto copy files after building VC++ unit-test projects.

------v1.1.3------

2011-08-03

    * Change function name of Ix_Object.
    * Change plugin version to 1.1.3.0.
    
    * Fix Ix_ConfigData and Cx_ConfigSection: Cx_Ptr GetSection(...)

2011-07-21

    * Add Ix_StringCoding (about MD5 and Base64) in TextUtility plugin.

2011-07-18

    * Add parameter 'enableDelayLoading' in Ix_PluginLoader.