@@ -9,7 +9,7 @@ all:
 	$(CC) $(CFLAGS_SO) -c  Cx_ConfigXml.cpp
 	$(CC) $(CFLAGS_SO) -c  Cx_XmlSection.cpp
 	$(CC) $(CFLAGS_SO) -c  Module.cpp
-	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/libConfigXml.so *.o $(LIBS)
+	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/ConfigXml.so *.o $(LIBS)
 clean:
 	rm -rf *.so
 	rm -rf *.o
