@@ -8,7 +8,7 @@ all:
 	$(CC) $(CFLAGS_SO) -c  Module.cpp
 	$(CC) $(CFLAGS_SO) -c  Cx_PluginLoader.cpp
 	$(CC) $(CFLAGS_SO) -c  DelayLoad.cpp
-	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/libPluginManager.so *.o $(LIBS)
+	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/PluginManagerX3.so *.o $(LIBS)
 clean:
 	rm -rf *.so
 	rm -rf *.o
