@@ -6,7 +6,7 @@ CFLAGS_SO   +=   -I$(INCLUDE_DIR)/pkg_Core/Interface
 all:
 	$(CC) $(CFLAGS_SO) -c  Cx_StringTable.cpp
 	$(CC) $(CFLAGS_SO) -c  Module.cpp
-	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/libStringTable.so *.o $(LIBS)
+	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/StringTable.so *.o $(LIBS)
 clean:
 	rm -rf *.so
 	rm -rf *.o
