@@ -10,7 +10,7 @@ all:
 	$(CC) $(CFLAGS_SO) -c  Module.cpp
 	$(CC) $(CFLAGS_SO) -c  base64.cpp
 	$(CC) $(CFLAGS_SO) -c  md5.cpp
-	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/libTextUtility.so *.o
+	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/TextUtility.so *.o
 clean:
 	rm -rf *.so
 	rm -rf *.o
